--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react-particles-js": "^3.6.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-typewriter-effect": "^1.1.0",
     "tsparticles": "^1.37.5",
+    "typed.js": "^2.0.12",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
