--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-particles-js": "^3.6.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-simple-typewriter": "^3.0.1",
+    "react-tsparticles": "^1.37.5",
     "react-typewriter-effect": "^1.1.0",
     "tsparticles": "^1.37.5",
     "typed.js": "^2.0.12",
